# Circuit-Geometry

./: .gitignore  Cargo.toml  LICENSE  Makefile  PLAN.md  PROJECT.md  README.md  justfile  pyproject.toml
.github/workflows/: ci-python.yml  ci-rust.yml  nightly-phase4-models.yml  release.yml  wheels.yml
.tmp/grpc_sidecar/: sidecar_pb2.py  sidecar_pb2_grpc.py
benches/python/: benchmark_runner.py  end_to_end_profile.py
benches/rust/: hypergraph_kernels.rs  metric_patch.rs  transport.rs
bindings/python/: Cargo.toml
crates/geoclt-artifacts/: Cargo.toml  README.md  RELEASE_READINESS_PLAN.md
crates/geoclt-artifacts/src/: bundle.rs  canonicalize.rs  compatibility.rs  io.rs  lib.rs  registry.rs  validate.rs
crates/geoclt-atlas/: Cargo.toml  README.md  RELEASE_READINESS_PLAN.md
crates/geoclt-atlas/src/: atlas.rs  lib.rs
crates/geoclt-benchmark/: Cargo.toml  README.md  RELEASE_READINESS_PLAN.md
crates/geoclt-benchmark/lanes/: IMMUTABLE_LOCK.json
crates/geoclt-benchmark/lanes/claims-triage/: v1.json
crates/geoclt-benchmark/lanes/hallucination-detection/: v1.json
crates/geoclt-benchmark/lanes/realworld-claims-triage/: v1.json
crates/geoclt-benchmark/lanes/realworld-policy-qa/: v1.json
crates/geoclt-benchmark/lanes/realworld-structured-intake/: v1.json
crates/geoclt-benchmark/lanes/reasoning-path-consistency/: v1.json
crates/geoclt-benchmark/lanes/safety-mechanism-check/: v1.json
crates/geoclt-benchmark/src/: admission.rs  contract.rs  falsifiers.rs  lanes.rs  lib.rs
crates/geoclt-benchmark/tests/: fixture_contract.rs
crates/geoclt-canonicalize/: Cargo.toml  README.md  RELEASE_READINESS_PLAN.md
crates/geoclt-canonicalize/src/: canonicalize.rs  falsifier_patterns.rs  hyperpath_signature.rs  lib.rs  mechanism_cluster.rs  mechanism_identity.rs  stability_metrics.rs
crates/geoclt-causal/: Cargo.toml  README.md  RELEASE_READINESS_PLAN.md
crates/geoclt-causal/src/: lib.rs  verify.rs
crates/geoclt-cli/: Cargo.toml  README.md  RELEASE_READINESS_PLAN.md
crates/geoclt-cli/src/: main.rs
crates/geoclt-core/: Cargo.toml  README.md  RELEASE_READINESS_PLAN.md
crates/geoclt-core/src/: deterministic.rs  error.rs  lib.rs  traits.rs
crates/geoclt-ffi/: Cargo.toml  README.md  RELEASE_READINESS_PLAN.md
crates/geoclt-ffi/src/: lib.rs
crates/geoclt-hypergraph/: Cargo.toml  README.md  RELEASE_READINESS_PLAN.md
crates/geoclt-hypergraph/src/: induce.rs  lib.rs
crates/geoclt-ids/: Cargo.toml  README.md  RELEASE_READINESS_PLAN.md
crates/geoclt-ids/src/: lib.rs
crates/geoclt-metric/: Cargo.toml  README.md  RELEASE_READINESS_PLAN.md
crates/geoclt-metric/src/: lib.rs  metric.rs
crates/geoclt-runtime/: Cargo.toml  README.md  RELEASE_READINESS_PLAN.md
crates/geoclt-runtime/src/: batch.rs  lib.rs  policy_engine.rs  run.rs  run_graph.rs  stream.rs
crates/geoclt-schema/: Cargo.toml  README.md  RELEASE_READINESS_PLAN.md
crates/geoclt-schema/src/: artifact.rs  atlas.rs  benchmark.rs  event.rs  hyperpath.rs  lib.rs  mechanism.rs  metric.rs  receipt.rs  transport.rs
crates/geoclt-schema/tests/: roundtrip.rs
crates/geoclt-sidecar/: Cargo.toml  README.md  RELEASE_READINESS_PLAN.md  build.rs
crates/geoclt-sidecar/proto/: sidecar.proto
crates/geoclt-sidecar/src/: batching.rs  emit.rs  lib.rs  server.rs  trace_state.rs
crates/geoclt-transport/: Cargo.toml  README.md  RELEASE_READINESS_PLAN.md
crates/geoclt-transport/src/: lib.rs  transport.rs
crates/geoclt-units/: Cargo.toml  README.md  RELEASE_READINESS_PLAN.md
crates/geoclt-units/src/: lib.rs
docs/adr/: 0001-rust-core-python-bindings.md  0002-sidecar-first-runtime.md  0003-canonical-ir.md
docs/architecture/: artifact-model.md  artifact-schemas.md  benchmark-spec.md  hyperpath_canonicalization.md  mechanism-identity.md  mechanism_identity.md  ontology.md  repo-conventions.md  sidecar-protocol.md  trace-lifecycle.md
docs/guides/: adding-a-benchmark-lane.md  adding-a-model-adapter.md  quickstart-python.md  quickstart-sidecar.md
docs/release/: CHANGELOG_RC.md  KNOWN_LIMITATIONS.md  crate-support-classes.md  internal_rc_runbook.md  release_invariants.md
docs/roadmap/: 90-day-plan.md
examples/configs/: factual_retrieval.toml
examples/python/: compare_baselines.py  export_decision_receipt.py  factual_retrieval_poc.py  inspect_mechanism_workspace.py  inspect_workspace.py  qwen_profile_run.py
proto/: artifact.proto  benchmark.proto  sidecar.proto
python/geoclt/: __init__.py  _kernel_math.py  _native.py  _paths.py  artifacts.py  atlas.py  benchmark.py  causal.py  differential.py  external_services.py  hypergraph.py  mair_runtime.py  mechanisms.py  metric.py  plotting.py  profiles.py  real_pipeline.py  receipts.py  (+5 more)
schemas/: CANONICALIZATION.md  COMPATIBILITY.md  artifact_bundle.schema.json  benchmark_result.schema.json  demo_scorecard.schema.json  hyperpath_record.schema.json  operator_review_record.schema.json  pilot_scope_policy_record.schema.json  registry.json
scripts/: assert_phase01_gate_report.py  assert_phase2_gate_report.py  assert_phase3a_gate_report.py  assert_phase3b_gate_report.py  assert_phase4a_gate_report.py  assert_phase4a_nightly_model_report.py  assert_phase4b_gate_report.py  assert_release_readiness_report.py  build_wheels.sh  check_determinism.py  check_lane_registry_immutability.py  check_no_placeholders.py  generate_desynthetic_status.py  generate_phase2_gate_report.py  generate_phase3_report_pack.py  generate_phase3a_gate_report.py  generate_phase3b_gate_report.py  generate_phase4_report_pack.py  generate_phase4a_gate_report.py  generate_phase4a_nightly_model_report.py  generate_phase4b_gate_report.py  generate_phase_gate_report.py  generate_release_readiness_report.py  generate_synthetic_inventory.py  package_release_evidence.py  release.sh  run_api_local.sh  run_phase01_gate.sh  run_phase2_gate.sh  run_phase3_report_pack.sh  run_phase3a_gate.sh  run_phase3b_gate.sh  run_phase4_report_pack.sh  run_phase4a_gate.sh  run_phase4a_nightly_models.sh  run_phase4b_gate.sh  run_poc.sh  run_release_candidate.sh  run_sidecar_local.sh  run_ui_local.sh  (+1 more)
src/: lib.rs
(+145 files in other folders)
