[workspace]
members = [
  "crates/geoclt-core",
  "crates/geoclt-ids",
  "crates/geoclt-units",
  "crates/geoclt-schema",
  "crates/geoclt-artifacts",
  "crates/geoclt-atlas",
  "crates/geoclt-metric",
  "crates/geoclt-transport",
  "crates/geoclt-hypergraph",
  "crates/geoclt-causal",
  "crates/geoclt-canonicalize",
  "crates/geoclt-benchmark",
  "crates/geoclt-sidecar",
  "crates/geoclt-runtime",
  "crates/geoclt-ffi",
  "crates/geoclt-cli",
  "bindings/python",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Geo-CLT Contributors"]
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
smallvec = "1"
bytes = "1"
uuid = { version = "1", features = ["v5", "serde"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
chrono = { version = "=0.4.38", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "=4.5.20", features = ["derive"] }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }
numpy = "0.22"
pyo3-serde = "0.1"
prost = "0.13"
tonic = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
jsonschema = "0.18"
toml = "0.8"
serde_jcs = "0.1"
