[package]
name = "geoclt-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[workspace]
members = [
  "crates/geoclt-core",
  "crates/geoclt-ids",
  "crates/geoclt-units",
  "crates/geoclt-schema",
  "crates/geoclt-artifacts",
  "crates/geoclt-atlas",
  "crates/geoclt-metric",
  "crates/geoclt-transport",
  "crates/geoclt-hypergraph",
  "crates/geoclt-causal",
  "crates/geoclt-canonicalize",
  "crates/geoclt-benchmark",
  "crates/geoclt-sidecar",
  "crates/geoclt-runtime",
  "crates/geoclt-ffi",
  "crates/geoclt-cli",
  "bindings/python",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Geo-CLT Contributors"]
rust-version = "1.85"
repository = "https://github.com/morphicsnet/Circuit-Geometry"
homepage = "https://github.com/morphicsnet/Circuit-Geometry"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
smallvec = "1"
bytes = "1"
uuid = { version = "1", features = ["v5", "serde"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
chrono = { version = "=0.4.38", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "=4.5.20", features = ["derive"] }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }
numpy = "0.22"
pyo3-serde = "0.1"
prost = "0.13"
tonic = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
jsonschema = "0.18"
toml = "0.8"
serde_jcs = "0.1"
geoclt-artifacts = { version = "=0.1.0", path = "crates/geoclt-artifacts" }
geoclt-atlas = { version = "=0.1.0", path = "crates/geoclt-atlas" }
geoclt-benchmark = { version = "=0.1.0", path = "crates/geoclt-benchmark" }
geoclt-canonicalize = { version = "=0.1.0", path = "crates/geoclt-canonicalize" }
geoclt-causal = { version = "=0.1.0", path = "crates/geoclt-causal" }
geoclt-cli = { version = "=0.1.0", path = "crates/geoclt-cli" }
geoclt-core = { version = "=0.1.0", path = "crates/geoclt-core" }
geoclt-ffi = { version = "=0.1.0", path = "crates/geoclt-ffi" }
geoclt-hypergraph = { version = "=0.1.0", path = "crates/geoclt-hypergraph" }
geoclt-ids = { version = "=0.1.0", path = "crates/geoclt-ids" }
geoclt-metric = { version = "=0.1.0", path = "crates/geoclt-metric" }
geoclt-runtime = { version = "=0.1.0", path = "crates/geoclt-runtime" }
geoclt-schema = { version = "=0.1.0", path = "crates/geoclt-schema" }
geoclt-sidecar = { version = "=0.1.0", path = "crates/geoclt-sidecar" }
geoclt-transport = { version = "=0.1.0", path = "crates/geoclt-transport" }
geoclt-units = { version = "=0.1.0", path = "crates/geoclt-units" }

[dependencies]
serde_json.workspace = true
geoclt-atlas.workspace = true
geoclt-hypergraph.workspace = true
geoclt-metric.workspace = true
geoclt-schema.workspace = true
geoclt-transport.workspace = true
geoclt-units.workspace = true

[[bench]]
name = "hypergraph_kernels"
path = "benches/rust/hypergraph_kernels.rs"
harness = false

[[bench]]
name = "metric_patch"
path = "benches/rust/metric_patch.rs"
harness = false

[[bench]]
name = "transport"
path = "benches/rust/transport.rs"
harness = false
