[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "geoclt"
version = "0.1.0"
description = "Geo-CLT workspace and Python bindings"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Geo-CLT Contributors" }
]
dependencies = [
  "numpy>=1.26",
  "pydantic>=2.7",
  "pyarrow>=17",
  "networkx>=3.3",
  "jsonschema>=4.23",
  "rich>=13.7",
  "typer>=0.12",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "mypy>=1.11",
  "ruff>=0.6",
  "fastapi>=0.115",
  "uvicorn>=0.31",
  "httpx>=0.27",
  "ipykernel>=6.29",
]
real = [
  "torch>=2.5",
  "transformers>=4.46",
  "grpcio>=1.64",
  "grpcio-tools>=1.64",
  "minio>=7.2",
  "redis>=5.1",
]

[tool.maturin]
manifest-path = "bindings/python/Cargo.toml"
python-source = "python"
module-name = "geoclt.geoclt_native"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
