[package]
name = "geoclt-artifacts"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
jsonschema.workspace = true
sha2.workspace = true
serde_jcs.workspace = true
geoclt-schema = { path = "../geoclt-schema" }
