[package]
name = "geoclt-benchmark"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
geoclt-schema = { path = "../geoclt-schema" }
geoclt-causal = { path = "../geoclt-causal" }
geoclt-ids = { path = "../geoclt-ids" }
geoclt-units = { path = "../geoclt-units" }

[dev-dependencies]
serde_json.workspace = true
