[package]
name = "geoclt-causal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Mechanism verification kernels over typed hyperpaths for Geo-CLT."
documentation = "https://docs.rs/geoclt-causal"
readme = "README.md"
keywords = ["geoclt", "causal", "mechanisms", "science", "verification"]
categories = ["science", "algorithms"]

[dependencies]
geoclt-canonicalize.workspace = true
geoclt-core.workspace = true
geoclt-ids.workspace = true
geoclt-schema.workspace = true
geoclt-units.workspace = true
