[package]
name = "geoclt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
tokio.workspace = true
geoclt-artifacts = { path = "../geoclt-artifacts" }
geoclt-benchmark = { path = "../geoclt-benchmark" }
geoclt-ids = { path = "../geoclt-ids" }
geoclt-schema = { path = "../geoclt-schema" }
geoclt-units = { path = "../geoclt-units" }
geoclt-sidecar = { path = "../geoclt-sidecar" }
