[package]
name = "geoclt-hypergraph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Deterministic candidate-event and hyperpath construction kernels for Geo-CLT."
documentation = "https://docs.rs/geoclt-hypergraph"
readme = "README.md"
keywords = ["geoclt", "hypergraph", "events", "science", "kernels"]
categories = ["science", "algorithms"]

[dependencies]
serde_json.workspace = true
geoclt-core.workspace = true
geoclt-ids.workspace = true
geoclt-schema.workspace = true
geoclt-units.workspace = true
