[package]
name = "geoclt-metric"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Pullback metric estimation and chart-energy kernels for Geo-CLT."
documentation = "https://docs.rs/geoclt-metric"
readme = "README.md"
keywords = ["geoclt", "metric", "geometry", "science", "kernels"]
categories = ["science", "algorithms"]

[dependencies]
serde_json.workspace = true
geoclt-core.workspace = true
geoclt-schema.workspace = true
geoclt-units.workspace = true
