[package]
name = "geoclt-schema"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
chrono.workspace = true
geoclt-core = { path = "../geoclt-core" }
geoclt-ids = { path = "../geoclt-ids" }
geoclt-units = { path = "../geoclt-units" }
