[package]
name = "geoclt-sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
geoclt-artifacts = { path = "../geoclt-artifacts" }
geoclt-schema = { path = "../geoclt-schema" }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
